@@ -1,4 +1,6 @@
 #!/usr/bin/python3
+import json
+import log
 
 EOF = b'\r\n'
 
@@ -12,3 +14,18 @@ def get_path_prefixes(elems):
 
 def mkpath(*elems):
     return '/'.join(elems)
+
+
+def load_config(path, logger):
+    alogger = log.TSKVLoggerAdapter(logger,
+                                    {'action': 'load config',
+                                     'path': path})
+    try:
+        with open(path) as config_file:
+            config = json.load(config_file)
+            alogger.info({'result': 'success'})
+            return config
+    except IOError:
+        alogger.error({'error': 'invalid config file path'})
+    except ValueError:
+        alogger.error({'error': 'invalid config file format'})
